# terminal_financial_console

./: .gitignore  AGENTS.md  README.md  backlog.md  config.yml  main.py  pyproject.toml  requirements.txt  run_neon_quotes.sh  specifications-update-ui.md
app/: __init__.py  actions_controller.py  bindings.py  cache.py  calendar.py  calendar_ticker_vm.py  chart_controller.py  chart_history.py  chart_rendering.py  command_completion.py  command_handlers.py  command_ui.py  commands.py  config.py  config_loader.py  config_repository.py  config_schema.py  constants.py  descriptions.py  feed.py  focus_navigation.py  formatters.py  group_rotation_controller.py  grouping.py  history_orchestration.py  i18n.py  market_panel_controller.py  market_runtime.py  models.py  name_resolution.py  news.py  ports.py  presenters.py  providers.py  refresh_controller.py  refresh_services.py  rotation.py  runtime_config.py  screens.py  settings.py  (+10 more)
tests/: test_actions_controller.py  test_bindings.py  test_calendar_ticker_vm.py  test_chart_controller.py  test_chart_history.py  test_chart_rendering.py  test_command_bus.py  test_command_completion.py  test_command_handlers.py  test_command_ui.py  test_commands.py  test_config_loader.py  test_config_repository.py  test_config_schema.py  test_focus_navigation.py  test_formatters.py  test_group_rotation_controller.py  test_grouping.py  test_history_orchestration.py  test_market_panel_controller.py  test_market_runtime.py  test_models.py  test_name_resolution.py  test_presenters.py  test_providers.py  test_refresh_controller.py  test_rotation.py  (+9 more)
