[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "neon-quotes-terminal"
description = "Terminal dashboard for real-time crypto, stocks, news and calendar streams."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "textual>=0.58.0",
  "websockets>=12.0",
  "yfinance>=0.2.40",
  "Babel>=2.16.0",
  "PyYAML>=6.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools_scm]
write_to = "app/_version.py"
fallback_version = "0.0.0"
tag_regex = "^v?(?P<version>\\d+\\.\\d+\\.\\d+.*)$"

